# -

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  index.html  package-lock.json  package.json
apps/api/: package.json  tsconfig.json
apps/api/src/: agent-worker.ts  app.ts  main.ts  routes.ts
apps/api/test/: admin-permission.test.ts  (+52 more)
apps/web/: package.json
docs/: API接口规格-MVP.md  Agent-Prompt模板规格.md  Agent工具定义文档.md  Agent生产部署与验收Runbook.md  Agent编排详细设计.md  OCR识别字段定义.md  人工兜底工作流设计.md  人工兜底恢复机制设计.md  企业画像字段规格书.md  企业端PRD.md  低置信度阈值定义.md  初始Prompt模板.md  前端页面路由与组件树.md  大数据中心AI产品需求文档.md  字段路径映射表.md  性能压测方案与基线.md  政府端PRD.md  政策清单模板.md  政策结构化Schema.md  数据安全与脱敏方案.md  数据库DDL-Postgres.sql  数据模型设计.md  材料管理与OCR集成方案.md  模型POC结论与定版流转单.md  模型选型规格书.md  测试用例与评测集.md  申报状态机设计.md  移动端适配方案.md  管理后台PRD.md  规则表达式DSL语法定义.md  账号与权限模型设计.md  资格预判规则引擎设计.md  运维手册.md  部署架构文档.md  首批政策候选清单.md
docs/agent/: mutilagent.md  多Agent协作实现蓝图.md  多Agent协作路线图.md
docs/frontend/: 企业端前端需求文档.md  公共入口前端需求文档.md  后台管理前端需求文档.md  政府端前端需求文档.md
docs/planning/: PRD改进.md  当前项目缺口.md
services/ocr-service/: pyproject.toml
services/ocr-service/app/: __init__.py  main.py
services/rag-service/: .env.example  README.md  pyproject.toml
services/rag-service/app/: config.py  main.py  schemas.py
services/rag-service/app/api/: health.py  rag.py
services/rag-service/app/rag/: chunk_mapper.py  cleaner.py  debug.py  document_store.py  index_service.py  pipeline_factory.py  search_service.py  splitter.py
services/rag-service/nankang_zhuqibao_rag_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+176 files in other folders)
