[project]
name = "nankang-zhuqibao-rag-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "haystack-ai>=2.8.0,<3.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
pgvector = [
  "pgvector-haystack>=3.0.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
